# TGB-MicroSuite

./: CHANGELOG.md  MLOPS_README.md  README.md  docker-compose.infra.example.yml  docker-compose.infra.yml  generate_tree.py  main.py  pyproject.toml  tgrambuddy.dockerfile
data/database/: tgrambuddy.db
infra/redis/: README.md  redis.conf
services/a-rag/: README.md  env.example  pyproject.toml  test_engine.py
services/a-rag/pipelines/: feature_ingestion_pipeline.py  feature_pipeline.py  run_pipeline.py
services/a-rag/pipelines/steps/: data_processing.py
services/a-rag/pipelines/steps/feature_ingestion/: embed.py  extract.py  load.py  process.py  processors.py
services/a-rag/src/agent/: engine.py  prompt_constructor.py  prompt_template.py  prompt_templates.py  rag_steps.py
services/a-rag/src/api/endpoints/: akey_router.py  auth_router.py  llm_router.py  memory_router.py
services/a-rag/src/api_keys/: service.py
services/a-rag/src/app/: main.py
services/a-rag/src/core/: config.py  container.py  profiling.py  security.py
services/a-rag/src/core/schemas/: akey_schemas.py  chat_schemas.py  llm_schemas.py  pipeline_schemas.py  rag_schemas.py  token_schemas.py  user_schemas.py
services/a-rag/src/core/services/: auth_service.py
services/a-rag/src/memory/: service.py
services/a-rag/src/models/: embedding_service.py  reranker_service.py
services/a-rag/src/scripts/: README-ingest.md  check_chroma.py  check_qdrant.py  check_retrieval.py  cli.py  ingest.py  run_database_migrations.py  run_migrations.sh
services/a-rag/src/storage/: redis_client.py
services/a-rag/src/storage/rel_db/: alembic.ini  db_adapter.py  dependencies.py  models.py
services/a-rag/src/storage/rel_db/migrations/: env.py
services/a-rag/src/storage/vec_db/: base.py  chroma.py  factory.py  qdrant.py
services/a-rag/tests/unit/core/: test_auth_service.py  test_config.py  test_container.py  test_profiling.py  test_security.py
services/rag-admin/: README.md  package-lock.json  package.json  setupTests.ts  tsconfig.json
services/rag-admin/public/src/app/: App.tsx
services/rag-admin/public/src/pages/: ApiKeysPage.tsx  DashboardPage.tsx  NotFoundPage.tsx
services/rag-admin/src/: main.tsx
services/rag-admin/src/app/providers/: AuthProvider.tsx
services/rag-admin/src/app/router/: index.tsx  route-guards.tsx
services/rag-admin/src/app/styles/: theme.ts
services/rag-admin/src/features/auth/: index.ts
services/rag-admin/src/pages/: LoginPage.tsx
services/rag-admin/src/shared/api/: token.service.ts
services/rag-admin/src/widgets/ApiKeysTable/: TableSkeleton.tsx
services/rag-admin/src/widgets/PageLayout/: PageLayout.tsx  index.ts
services/tg-gateway/: README.md  env.example  pyproject.toml
services/tg-gateway/src/app/: main.py
services/tg-gateway/src/bot/features/onboarding/: handler.py  router.py
services/tg-gateway/src/bot/features/rag_chat/: handler.py  router.py
services/tg-gateway/src/bot/features/session/: handler.py  router.py
services/tg-gateway/src/bot/features/session/locales/: en.json
services/tg-gateway/src/bot/middleware/: db_middleware.py
services/tg-gateway/src/clients/: rag_api_client.py
services/tg-gateway/src/core/: config.py  localization.py
services/tg-gateway/src/scripts/: cli.py
services/tg-gateway/src/storage/rel_db/: alembic.ini  db_adapter.py  models.py
services/tg-gateway/src/storage/rel_db/migrations/: env.py
src/bot/core/: aiobot.py
src/bot/features/img_bw/: convert_to_bw_callback.py
src/bot/features/img_upload/: __init__.py  upload_photo_callback.py
src/bot/features/imgbw/: imgbw_handler.py
src/bot/features/imgbw/locales/: en.json
src/bot/features/imgupload/: imgupload_handler.py
src/bot/features/onboarding/: __init__.py  start_handler.py  start_router.py
src/bot/features/onboarding/locales/: en.json
src/bot/handlers/: start.py
src/bot/handlers/media/: __init__.py  upload_photo_callback.py
src/bot/handlers/onboarding/: __init__.py  start_command.py
src/database/: db_adapter.py
tgrambot/: .dockerignore
tgrambot/migrations/: env.py
tgramllm/: .env  import_default_user.py  pyproject.toml
tgramllm/backend/: main.py
tgramllm/backend/database/: db_adapter.py  dependencies.py  import_default_user.py  models.py
tgramllm/backend/migrations/: env.py
tgramllm/backend/migrations/versions/: 50fcf8087c60_initial_schema_with_comments.py
tgramllm/backend/src/core/: akey_service.py  config.py  security.py
tgramllm/backend/src/routers/: akey_router.py  auth_router.py  llm_router.py
tgramllm/backend/src/schemas/: akey_schemas.py  llm_schemas.py  token_schemas.py  user_schemas.py
tgramllm/backend/src/services/: engine.py
tgramllm/frontend/: .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
tgramllm/frontend/src/: App.jsx  AuthContext.jsx  DashboardPage.jsx  Layout.jsx  LoginPage.jsx  PrivateRoute.jsx  UseAuth.js  index.css  main.jsx
tgramllm/frontend/src/app/providers/: index.tsx
tgramllm/frontend/src/components/layout/: Layout.jsx  index.js
tgramllm/frontend/src/entities/api-key/: index.ts
tgramllm/frontend/src/entities/api-key/api/: useApiKeys.ts  useUpdateApiKey.ts
tgramllm/frontend/src/entities/api-key/model/: index.ts
tgramllm/frontend/src/features/api-key-management/create-key/ui/: ApiKeyDisplayModal.tsx
tgramllm/frontend/src/features/api-keys/routes/: ApiKeysPage.jsx
tgramllm/frontend/src/features/auth/context/: AuthProvider.jsx  auth-context.js
tgramllm/frontend/src/features/auth/hooks/: useAuth.js
tgramllm/frontend/src/features/auth/routes/: LoginPage.jsx
tgramllm/frontend/src/features/dashboard/routes/: DashboardPage.jsx
tgramllm/frontend/src/pages/: index.ts
tgramllm/frontend/src/routes/: PrivateRoute.jsx  index.jsx
tgramllm/frontend/src/services/: apiClient.js
tgramllm/frontend/src/shared/api/: index.ts
tgramllm/frontend/src/shared/hooks/: index.ts
tgramllm/frontend/src/styles/: global.css
tgramllm/frontend/src/widgets/ApiKeysTable/: ApiKeysTable.tsx  index.ts
volumes/: README.md
(+15 files in other folders)
